Notebooks notes add

--- a/notebooks/context_pdf_rag.ipynb
+++ b/notebooks/context_pdf_rag.ipynb
@@ -6,11 +6,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import requests\n",
     "from pypdf import PdfReader\n",
     "from sentence_transformers import SentenceTransformer\n",
-    "import faiss\n",
-    "import re"
+    "import faiss"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### ¿Qué es un Chunk? 🧩✨\n",
+    "\n",
+    "Un **chunk** es un fragmento de datos que se utiliza en el procesamiento de texto. 📦 Se refiere a partes más pequeñas del texto, lo que facilita su manejo y análisis. 📝✂️\n",
+    "\n",
+    "Dividir un texto en chunks (por ejemplo, de 1000 caracteres) permite trabajar de manera más eficiente y realizar operaciones como:\n",
+    "\n",
+    "- Análisis de contenido 📖\n",
+    "- Generación de resúmenes 📝✨\n",
+    "- Procesamiento en paralelo ⚙️💻"
    ]
   },
   {
@@ -27,18 +40,44 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Función `get_pdf_content` 📄🔍\n",
+    "\n",
+    "La función `get_pdf_content` extrae el contenido de un archivo PDF dado su ruta (`path`)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
     "def get_pdf_content(path):\n",
+    "    # Abrimos el archivo PDF en modo binario\n",
     "    with open(path, 'rb') as file:\n",
+    "        # Creamos un lector de PDF\n",
     "        reader = PdfReader(file)\n",
+    "        # Inicializamos una cadena de texto vacía\n",
     "        text = ''\n",
+    "        # Iteramos a través de todas las páginas del PDF\n",
     "        for page in reader.pages:\n",
     "            text += page.extract_text() + '\\n'\n",
     "    return text.strip()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Función `create_vector_store` 📄🔍\n",
+    "\n",
+    "La función `create_vector_store` crea un almacén de vectores a partir de fragmentos de texto (`chunks`).\n",
+    "\n",
+    "Esta función es útil para realizar búsquedas de similitud en grandes volúmenes de texto. 🧠✨\n",
+    "\n",
+    "**No obstante nosotros los embeddings los vamos a guardar en una colección de MongoDB.**"
    ]
   },
   {
@@ -49,14 +88,36 @@
    "source": [
     "# Creamos el vector store\n",
     "def create_vector_store(chunks):\n",
+    "    # Creamos un modelo de transformacion de texto\n",
     "    model = SentenceTransformer('sentence-transformers/all-MiniLM-L6-v2')\n",
+    "    # Creamos los embeddings\n",
     "    embeddings = model.encode(chunks)\n",
-    "    \n",
+    "    # Obtenemos la dimension de los embeddings\n",
     "    dimension = embeddings.shape[1]\n",
+    "    # Creamos un indice de FAISS para la busqueda de similitud\n",
     "    index = faiss.IndexFlatIP(dimension)\n",
+    "    # Añadimos los embeddings al indice\n",
     "    index.add(embeddings.astype('float32'))\n",
-    "    \n",
+    "    # Devolvemos el modelo y el indice\n",
     "    return model, index"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### ¿Qué hace la función `search`? 🔍✨\n",
+    "\n",
+    "La función `search` realiza una búsqueda basada en la similitud de cosenos utilizando un modelo y un índice de embeddings. A continuación se describen sus acciones:\n",
+    "\n",
+    "1. **Codifica la consulta**: Convierte la consulta en un vector.\n",
+    "2. **Realiza la búsqueda**: Busca los `k` embeddings más similares en el índice.\n",
+    "3. **Prepara los resultados**: Crea una lista con puntajes de similitud y fragmentos de contenido (200 caracteres).\n",
+    "4. **Devuelve los resultados**: Retorna la lista de resultados.\n",
+    "\n",
+    "Esta función es útil para encontrar los fragmentos de texto más relevantes en función de una consulta dada. 📄🔗\n",
+    "\n",
+    "**Nosotros la función de búsqueda la realizaremos desde MongoDB Atlas que nos proporciona $vectorSearch para buscar documentos similares en la colección.**"
    ]
   },
   {
@@ -77,6 +138,13 @@
     "            'content': chunks[idx][:200] + \"...\"\n",
     "        })\n",
     "    return results"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Api de OpenAI de Nvidia\n"
    ]
   },
   {
@@ -111,6 +179,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Función `format_prompt` 📝✨\n",
+    "\n",
+    "La función `format_prompt` formatea un prompt para ser utilizado en un modelo de lenguaje.\n",
+    "\n",
+    "Esta función es útil para estructurar la entrada que se enviará a un modelo de lenguaje, asegurando que la pregunta y el contexto estén claramente presentados. 🤖💬"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 25,
    "metadata": {},
@@ -125,6 +204,13 @@
     "    \n",
     "    Respuesta:\"\"\"\n",
     "    return prompt\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Ejemplo de uso"
    ]
   },
   {
