--- a/notebooks/context_web_rag.ipynb
+++ b/notebooks/context_web_rag.ipynb
@@ -14,6 +14,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Función `get_web_content` 🌐✨\n",
+    "\n",
+    "La función `get_web_content` obtiene el contenido textual de una página web dada su URL. Realiza las siguientes acciones:\n",
+    "Esta función es útil para extraer información relevante de páginas web para su posterior análisis o procesamiento. 📊✨"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 118,
    "metadata": {},
